Introduce authoritative, inherit behavior
